# hldemo-rs

./: Cargo.toml  README.md
examples/: dump_frames.rs  without_frames.rs
src/: errors.rs  lib.rs  main.rs  parser.rs  tests.rs  types.rs
src/parse/: demo.rs  directory.rs  header.rs  macros.rs  mod.rs
src/parse/frame/: client_data.rs  console_command.rs  demo_buffer.rs  event.rs  mod.rs  netmsg.rs  sound.rs  weapon_anim.rs
test-demos/: basic.dem  frame-types.dem  invalid-demo-protocol.dem  invalid-directory-entry-count.dem  invalid-frame-type.dem  invalid-magic.dem  invalid-netmsg-length.dem
